--- a/Mada.html
+++ b/Mada.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
 
         <header><h1 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;color: rgb(161, 175, 192); text-align: center;">  Robot Control Panel</sub></h1>
             
